fixed styling issue on mobile - slideshow displaying on top of menu button

--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ canvas {
   }
 
   #menu-button {
+    z-index: 98;
     display: block;
     cursor: pointer;
     color: white;
